<resources>
    <string name="app_name">SocietyOO</string>
    <string name="db_app_name">SocietyOO-Database</string>

    <string name="cd_splashlogo">Splash Logo</string>

    <!-- Strings related to login -->
    <string name="welcome_splash">Welcome to %s</string>
    <string name="continue_splash">By continuing you agree -></string>

    <!-- Strings related to login -->
    <string name="welcome_mobile">Welcome to %s</string>
    <string name="prompt_mobile">Enter Mobile Number</string>
    <string name="next_btn_mobile">Next</string>
    <string name="save_btn">Save</string>
    <string name="header_otp">Welcome to OTP</string>
    <string name="verify_btn_otp">Verify</string>
    <string name="resend_btn_otp">Resend OTP</string>
    <string name="invalid_mobile">Not a valid mobile</string>
    <string name="header_login">Welcome to Cherry County</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="header_flats">You have multiple flats Register with Us.</string>
    <string name="prompt_flats">Please Select your preference</string>


    <!-- Strings related to User Profile -->
    <string name="header_user_profile">Please Enter Your Details</string>
    <string name="prompt_name">FullName</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_mobile_secondary">Secondary Mobile (Optional)</string>
    <string name="prompt_gender">Gender </string>
    <string name="prompt_dob">Date of Birth : </string>
    <string name="prompt_dob_dailog">Select DOB</string>
    <string name="invalid_name">Not a valid Name</string>
    <string name="invalid_email">Not a valid Email</string>
    <string name="invalid_gender">Please select Gender</string>
    <string name="invalid_dob">Please select DOB</string>


    <!-- Strings related to Provider -->
    <string name="prompt_provider_title">Service Title</string>
    <string name="prompt_provider_website">Website</string>
    <string name="prompt_provider_timing">Timing</string>
    <string name="prompt_provider_about">About Services</string>
    <string name="prompt_provider_category">Select Category</string>
    <string name="prompt_provider_sub_category">Select Sub-Category</string>
    <string name="prompt_provider_contact_person">Contact Person</string>
    <string name="prompt_provider_email">Email</string>
    <string name="prompt_provider_phone">Phone No</string>
    <string name="prompt_provider_whatsapp">Whatsapp No</string>

    <string name="invalid_provider_logo">Upload a logo</string>
    <string name="invalid_provider_title">Not a valid title</string>
    <string name="invalid_provider_images">Upload at least 1 image</string>
    <string name="invalid_provider_website">Not a valid website</string>
    <string name="invalid_provider_time">Not a valid time</string>
    <string name="invalid_provider_about">Not a valid About Us</string>
    <string name="invalid_provider_category">Category not selected</string>
    <string name="invalid_provider_subcategory">Sub-Category not selected</string>
    <string name="invalid_provider_person">Not a valid person name</string>
    <string name="invalid_provider_email">Not a valid email</string>
    <string name="invalid_provider_phone">Not a valid Phone No.</string>
    <string name="invalid_provider_whatsapp">Not a valid Phone No.</string>
    <string name="invalid_provider_page">There are one or more errors on this page. please correct them and submit again.</string>


    <!-- Strings related to Post -->
    <string name="prompt_post_text">What\'s on your mind?</string>
    <string name="invalid_post_text">Please write something to post</string>



    <string name="title_activity_on_board">OnBoardActivity</string>



    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>






    <!-- <string name="prompt_name">FullName</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="phone_title_text">Phone Number</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>



    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>-->

    <string-array name="feature_title">
        <item>Know Your Society</item>
        <item>Local Market Shopping</item>
        <item>Connect with You Society</item>
        <item>News and Event</item>
    </string-array>

    <string-array name="feature_desc">
        <item>Here You can explore you society and services offering by other people inside society</item>
        <item>Using this app you can fount near by local shops and you can order item at your doorstep</item>
        <item>You can connect with your tower/block group in society, where you can ask anything you need</item>
        <item>Be updated about you society and near by events or news. Here you can find the events hosted for your Society, Block/Tower.</item>
    </string-array>

    <string-array name="service_category_hint">
        <item>Services Category</item>
    </string-array>
    <string-array name="service_sub_category_hint">
        <item>Service Sub-Category</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
