<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:text="@string/header_otp"
        android:textAlignment="center"
        android:textSize="28sp"
        android:layout_alignParentTop="true"
         />

    <!--android:itemBackground="@drawable/bg_otp_item"-->

    <com.jans.otpview.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:itemBackground="@drawable/bg_otp_item"
        app:hideLineWhenFilled="false"
        app:itemCount="4"
        app:itemSpacing="12dp"
        app:lineWidth="2dp"
        app:cursorColor="@color/colorAccent"
        android:textSize="20sp"
       android:layout_below="@+id/textView"
        app:lineColor="@drawable/otp_item_state"
        app:state_filled="true"
        app:viewType="rectangle"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:orientation="vertical"
        android:layout_below="@+id/otp_view"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:enabled="false"
            android:background="@drawable/btn_box_bg"
            android:text="@string/verify_btn_otp" />

        <TextView
            android:id="@+id/btnResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:text="@string/resend_btn_otp"
            android:enabled="false"
            android:textColor="@drawable/text_selector"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="wait 0s"
            android:textColor="@drawable/text_selector"
            android:textSize="14sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="7dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>